fix: use classpath against filesystem